# terminal-control

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  package.json
.changeset/: README.md  bright-terminals-share.md  config.json  docs-audit-readme.md  fast-mcp-screens.md  fuzzy-panes-run.md  quiet-ghosts-reflow.md  semantic-snapshot.md
.github/workflows/: ci.yml  npm-release.yml
docs/: driver-protocol.md  releasing.md  rust-library.md  semantic-protocol.md  typescript-client.md
perf/: workspace-attachment.md  workspace-idle.md  workspace-rendering.md
schemas/: frame-v1.schema.json  recording-entry-v1.schema.json  video-edit-v1.schema.json
scripts/: bench-workspace-attach.ts  bench-workspace-idle.ts  native-packages.mjs  publish-npm-tarballs.mjs  release-packages.mjs  validate-npm-packages.mjs  validate-opentui-package.mjs
skills/terminal-control/: SKILL.md
src/: capture.rs  driver.rs  frame.rs  lib.rs  main.rs  mcp.rs  recording.rs  render.rs  runtime.rs  semantic.rs  session.rs  shot.rs  terminal_core.rs  terminal_theme.rs  workspace.rs
src/render/: box_drawing.rs
