[package]
name = "terminal-control"
version = "0.5.0"
edition = "2024"
rust-version = "1.93"
description = "Control and test terminal applications through stable visible state"
license = "MIT"
repository = "https://github.com/anomalyco/terminal-control"
readme = "README.md"
keywords = ["terminal", "tui", "testing", "automation", "ansi"]
categories = ["command-line-utilities", "development-tools::testing"]
include = ["/src/**", "/schemas/**", "/Cargo.toml", "/Cargo.lock", "/README.md", "/LICENSE", "/THIRD_PARTY_LICENSES.md"]
autobins = false

[[bin]]
name = "termctrl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
libghostty-vt = { version = "0.2.1", default-features = false }
portable-pty = "0.9.0"
resvg = { version = "0.47.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
rmcp = { version = "2.2.0", features = ["server", "transport-io", "schemars"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
